--- a/calculator.html
+++ b/calculator.html
@@ -23,7 +23,9 @@
   <body style="background-color: black">
     <nav class="navbar navbar-expand-lg py-2 px-4 navbar-light bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand text-white" href="/"><h1>MT</h1></a>
+        <a class="navbar-brand text-white" href="/MultiTalented/"
+          ><h1>MT</h1></a
+        >
         <button
           class="navbar-toggler bg-light"
           type="button"
@@ -38,13 +40,16 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item ml-5" style="margin-left: 20px">
-              <a class="nav-link text-white" aria-current="page" href="/"
+              <a
+                class="nav-link text-white"
+                aria-current="page"
+                href="/MultiTalented/"
                 >Home</a
               >
             </li>
             <li class="nav-item dropdown ml-5" style="margin-left: 20px">
               <a
-                class="nav-link text-white active dropdown-toggle"
+                class="nav-link text-white dropdown-toggle active"
                 href="#"
                 id="navbarDropdownMenuLink"
                 role="button"
@@ -58,22 +63,28 @@
                 aria-labelledby="navbarDropdownMenuLink"
               >
                 <li>
-                  <a class="dropdown-item" href="/calculator">Calculator</a>
+                  <a class="dropdown-item" href="/MultiTalented/calculator"
+                    >Calculator</a
+                  >
                 </li>
                 <li><hr class="dropdown-divider" /></li>
 
                 <li>
-                  <a class="dropdown-item" href="/notesTaker">Notes Taker</a>
+                  <a class="dropdown-item" href="/MultiTalented/notesTaker"
+                    >Notes Taker</a
+                  >
                 </li>
                 <li><hr class="dropdown-divider" /></li>
                 <li>
-                  <a class="dropdown-item" href="/expenseTracker"
+                  <a class="dropdown-item" href="/MultiTalented/expenseTracker"
                     >Expense Tracker</a
                   >
                 </li>
                 <li><hr class="dropdown-divider" /></li>
                 <li>
-                  <a class="dropdown-item" href="/todo">ToDo List Taker</a>
+                  <a class="dropdown-item" href="/MultiTalented/todo"
+                    >ToDo List Taker</a
+                  >
                 </li>
               </ul>
             </li>
@@ -93,11 +104,15 @@
                 aria-labelledby="navbarDropdownMenuLink"
               >
                 <li>
-                  <a class="dropdown-item" href="/guessGame">Guess Game</a>
+                  <a class="dropdown-item" href="/MultiTalented/guessGame"
+                    >Guess Game</a
+                  >
                 </li>
                 <li><hr class="dropdown-divider" /></li>
                 <li>
-                  <a class="dropdown-item" href="/tictactoe">Tic Tac Toe</a>
+                  <a class="dropdown-item" href="/MultiTalented/tictactoe"
+                    >Tic Tac Toe</a
+                  >
                 </li>
               </ul>
             </li>
