--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
   <body>
     <nav class="navbar navbar-expand-lg py-2 px-4 navbar-light bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand text-white" href="/"><h1>MT</h1></a>
+        <a class="navbar-brand text-white" href="/MultiTalented/"><h1>MT</h1></a>
         <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item ml-5" style="margin-left: 20px">
-              <a class="nav-link text-white active" aria-current="page" href="/">Home</a>
+              <a class="nav-link text-white active" aria-current="page" href="/MultiTalented/">Home</a>
             </li>
             <li class="nav-item dropdown ml-5"
             style="margin-left: 20px;">
@@ -36,14 +36,14 @@
                 Apps
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <li><a class="dropdown-item" href="/calculator">Calculator</a></li>
+                <li><a class="dropdown-item" href="/MultiTalented/calculator">Calculator</a></li>
                 <li><hr class="dropdown-divider" /></li>
 
-                <li><a class="dropdown-item" href="/notesTaker">Notes Taker</a></li>
+                <li><a class="dropdown-item" href="/MultiTalented/notesTaker">Notes Taker</a></li>
                 <li><hr class="dropdown-divider" /></li>
-                <li><a class="dropdown-item" href="/expenseTracker">Expense Tracker</a></li>
+                <li><a class="dropdown-item" href="/MultiTalented/expenseTracker">Expense Tracker</a></li>
                 <li><hr class="dropdown-divider" /></li>
-                <li><a class="dropdown-item" href="/todo">ToDo List Taker</a></li>
+                <li><a class="dropdown-item" href="/MultiTalented/todo">ToDo List Taker</a></li>
               </ul>
             </li>
             <li class="nav-item dropdown ml-5"
@@ -52,9 +52,9 @@
                 Games
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <li><a class="dropdown-item" href="/guessGame">Guess Game</a></li>
+                <li><a class="dropdown-item" href="/MultiTalented/guessGame">Guess Game</a></li>
                 <li><hr class="dropdown-divider" /></li>
-                <li><a class="dropdown-item" href="/tictactoe">Tic Tac Toe</a></li>
+                <li><a class="dropdown-item" href="/MultiTalented/tictactoe">Tic Tac Toe</a></li>
               </ul>
             </li>
             <li class="nav-item dropdown ml-5"
