--- a/guessGame.html
+++ b/guessGame.html
@@ -15,7 +15,7 @@
 
     <link rel="shortcut icon" href="/Images/favicon.ico" type="image/x-icon" />
 
-    <link rel="stylesheet" href="/styleSheets/guessGame.css" />
+    <link rel="stylesheet" href="./public/styleSheets/guessGame.css" />
 
     <title>Multi-Talented</title>
   </head>
