--- a/guessGame.html
+++ b/guessGame.html
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
     />
 
-    <link rel="shortcut icon" href="/Images/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="./public/Images/favicon.ico" type="image/x-icon" />
 
     <link rel="stylesheet" href="./public/styleSheets/guessGame.css" />
 
