--- a/calculator.html
+++ b/calculator.html
@@ -13,9 +13,9 @@
       crossorigin="anonymous"
     />
 
-    <link rel="shortcut icon" href="/Images/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="./public/Images/favicon.ico" type="image/x-icon" />
 
-    <link rel="stylesheet" href="/styleSheets/calculator.css" />
+    <link rel="stylesheet" href="./public/styleSheets/calculator.css" />
     <!-- <script src="/public/script/expenseTracker.js"></script> -->
 
     <title>Multi-Talented</title>
