--- a/notesTaker.html
+++ b/notesTaker.html
@@ -12,9 +12,9 @@
       integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
       crossorigin="anonymous"
     />
-    <link rel="shortcut icon" href="/Images/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="./public/Images/favicon.ico" type="image/x-icon" />
 
-    <link rel="stylesheet" href="/styleSheets/notesTaker.css" />
+    <link rel="stylesheet" href="./public/styleSheets/notesTaker.css" />
     <!-- <script src="/public/script/expenseTracker.js"></script> -->
 
     <title>Multi-Talented</title>
