--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
       crossorigin="anonymous"
     />
-    <link rel="shortcut icon" href="/Images/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="./public/Images/favicon.ico" type="image/x-icon" />
 
     <link rel="stylesheet" href="/styleSheets/style.css" />
 
@@ -151,7 +151,7 @@
           >
             <div class="accordion-body">
               Two games are also added in Multi-Talented in order to quickly refresh mind. <br>
-              1. <strong>Guess Game</strong> &#8594; This is a hit and try game. You are allowed to flip two cards at a time, and if numbers on both flipped cards come out to be same, you score a point. 
+              1. <strong>Guess Game</strong> &#8594; This is a hit and try game. You are allowed to flip two cards at a time, and if numbers on both flipped cards come out to be same, you score a point. <br>
               2. <strong>Tic Tac Toe</strong> &#8594; This is a standard Tic Tac Toe game.
             </div>
           </div>
@@ -178,80 +178,12 @@
             <div class="accordion-body">
               You can do this by using WeShare.<strong>Welcome to WeShare!</strong>
               This is a <strong>WEB CHAT APPLICATION</strong> made using <strong>ReactJS, ExpressJS, NodeJS and SocketIO.</strong> Just join-in in a room with a unique username and share the room-name with your friends. That's it. Chat with friends, enjoy and leave the room. <br>
-              <strong>JoinIn page of WeShare is case-sensitive. Make sure you share the room name should be AS IT IS with your friends</strong>
+              <strong>JoinIn page of WeShare is case-sensitive. Make sure the room name you share should be AS IT IS with your friends</strong>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <!-- <div
-      id="carouselExampleFade"
-      class="carousel slide carousel-fade"
-      data-bs-ride="carousel"
-    >
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <div class="card bg-dark text-white">
-            <img src="/bgfixed1.jpg" class="card-img" alt="..." />
-            <div class="card-img-overlay">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">
-                This is a wider card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit
-                longer.
-              </p>
-              <p class="card-text">Last updated 3 mins ago</p>
-            </div>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class="card bg-dark text-white">
-            <img src="/bgfixed2.jpg" class="card-img" alt="..." />
-            <div class="card-img-overlay">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">
-                This is a wider card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit
-                longer.
-              </p>
-              <p class="card-text">Last updated 3 mins ago</p>
-            </div>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class="card bg-dark text-white">
-            <img src="/bgfixed4.jpg" class="card-img" alt="..." />
-            <div class="card-img-overlay">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">
-                This is a wider card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit
-                longer.
-              </p>
-              <p class="card-text">Last updated 3 mins ago</p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <button
-        class="carousel-control-prev"
-        type="button"
-        data-bs-target="#carouselExampleFade"
-        data-bs-slide="prev"
-      >
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button
-        class="carousel-control-next"
-        type="button"
-        data-bs-target="#carouselExampleFade"
-        data-bs-slide="next"
-      >
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
-    </div> -->
 
     <!-- Optional JavaScript; choose one of the two! -->
 
